docs/docs/2.x/ko/guide/usage/custom-components.mdx
import { Tab, Tabs } from '@rspress/core/theme';

# 커스텀 컴포넌트

`react-native-gesture-image-viewer`는 강력한 기능으로 완벽한 컴포넌트 커스터마이징이 가능합니다. 이미지뿐만 아니라 원하는 컴포넌트로 제스처를 지원하는 아이템을 만들 수 있습니다.

## 모달 컴포넌트

다음과 같이 원하는 `Modal`을 사용하여 뷰어를 만들 수 있습니다.

<Tabs>
  <Tab label="Use Modal">
    ```tsx
    import { FlatList, Image, Modal } from 'react-native';
    import { GestureViewer } from 'react-native-gesture-image-viewer';

    function App() {
      const images = [...];
      const [visible, setVisible] = useState(false);

      return (
        <Modal visible={visible} onRequestClose={() => setVisible(false)}>
          <GestureViewer
            data={images}
            renderItem={renderImage}
            ListComponent={FlatList}
            onDismiss={() => setVisible(false)}
          />
        </Modal>
      );
    }
    ```

  </Tab>
  <Tab label="Use react-nativee-modal">
    ```tsx
    import { FlatList, Image } from 'react-native';
    import Modal from 'react-native-modal';
    import { GestureViewer } from 'react-native-gesture-image-viewer';

    function App() {
      const images = [...];
      const [visible, setVisible] = useState(false);

      return (
        <Modal
          isVisible={visible}
          onBackButtonPress={() => setVisible(false)}
          onBackdropPress={() => setVisible(false)}
          hasBackdrop={false}
          style={styles.modal}
          useNativeDriver={true}
          hideModalContentWhileAnimating={true}
          animationInTiming={300}
          animationOutTiming={300}
        >
          <GestureViewer
            data={images}
            renderItem={renderImage}
            ListComponent={FlatList}
            onDismiss={() => setVisible(false)}
          />
        </Modal>
      );
    }
    ```

  </Tab>
</Tabs>

## 리스트 컴포넌트

`ListComponent` props를 통해 `ScrollView`, `FlatList`, [`FlashList`](https://shopify.github.io/flash-list/) 등 원하는 리스트를 지원합니다.  
`listProps`는 **선택한 리스트 컴포넌트에 맞는 타입 추론**을 제공하여, IDE에서 정확한 자동완성과 타입 안전성을 보장합니다.

```tsx
import { FlashList } from '@shopify/flash-list';

function App() {
  return (
    <GestureViewer
      data={images}
      ListComponent={FlashList}
      listProps={
        {
          // ✅ FlashList props autocompletion
        }
      }
    />
  );
}
```

## 콘텐츠 컴포넌트

`renderItem` props를 통해 [`expo-image`](https://docs.expo.dev/versions/latest/sdk/image/), [`FastImage`](https://github.com/DylanVann/react-native-fast-image) 등 다양한 종류의 콘텐츠 컴포넌트를 주입하여 제스처를 사용할 수 있습니다.

```tsx
import { useCallback } from 'react';
import { Image } from 'expo-image';
import { GestureViewer } from 'react-native-gesture-image-viewer';

const images = [
  { uri: 'https://picsum.photos/400/200', width: 400, height: 200 },
  { uri: 'https://picsum.photos/200/400', width: 200, height: 400 },
];

function getImageDimensions(image: (typeof images)[number]) {
  return { width: image.width, height: image.height };
}

function App() {
  const renderImage = useCallback((image: (typeof images)[number]) => {
    return (
      <Image
        source={{ uri: image.uri }}
        style={{ width: '100%', height: '100%' }}
        contentFit="contain"
      />
    );
  }, []);
  return (
    <GestureViewer data={images} renderItem={renderImage} getItemDimensions={getImageDimensions} />
  );
}
```

## 콘텐츠 치수

`contain`으로 맞춘 콘텐츠라면 가능할 때 원본/source 치수를 전달하세요. 그래야 팬과 더블 탭 줌 범위가 전체 뷰어 셀이 아니라 실제 보이는 콘텐츠의 가장자리에 맞춰집니다.

다음 중 하나를 선택하면 됩니다.

- 데이터에 치수가 이미 있으면 `getItemDimensions`를 사용하세요.
- 이미지 로드 후에만 치수를 알 수 있으면 `renderItem`의 `setItemDimensions`를 사용하세요.
- 같은 논리 아이템이 같은 slot에서 다른 객체로 다시 만들어질 수 있다면 runtime `setItemDimensions` 경로와 함께 `getItemKey`를 사용하세요.
- 둘 다 생략하면 기존 동작처럼 전체 뷰어 셀을 콘텐츠 크기로 사용하는 fallback이 적용됩니다.

### React Native Image

```tsx
import { Image } from 'react-native';
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderImage(
  uri: string,
  _index: number,
  { setItemDimensions }: GestureViewerRenderItemInfo,
) {
  return (
    <Image
      source={{ uri }}
      style={{ width: '100%', height: '100%' }}
      resizeMode="contain"
      onLoad={({ nativeEvent }) => {
        setItemDimensions({
          width: nativeEvent.source.width,
          height: nativeEvent.source.height,
        });
      }}
    />
  );
}
```

### Expo Image

```tsx
import { Image } from 'expo-image';
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderImage(
  uri: string,
  _index: number,
  { setItemDimensions }: GestureViewerRenderItemInfo,
) {
  return (
    <Image
      source={{ uri }}
      style={{ width: '100%', height: '100%' }}
      contentFit="contain"
      onLoad={(event) => {
        setItemDimensions({
          width: event.source.width,
          height: event.source.height,
        });
      }}
    />
  );
}
```

### FastImage

```tsx
import FastImage from 'react-native-fast-image';
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderImage(
  uri: string,
  _index: number,
  { setItemDimensions }: GestureViewerRenderItemInfo,
) {
  return (
    <FastImage
      source={{ uri }}
      style={{ width: '100%', height: '100%' }}
      resizeMode={FastImage.resizeMode.contain}
      onLoad={({ nativeEvent }) => {
        setItemDimensions({
          width: nativeEvent.width,
          height: nativeEvent.height,
        });
      }}
    />
  );
}
```

<span id="renderitem-active-state" />

### `renderItem` 활성 상태 (`isActive`)

비디오처럼 현재 표시 중인 콘텐츠에서만 재생이나 작업을 수행해야 한다면 세 번째 `renderItem` 인자의 `isActive`를 사용할 수 있습니다. 이 값은 현재 선택된 콘텐츠에서만 `true`입니다. 페이지 전환 중에는 기존 콘텐츠가 활성 상태를 유지하고, 이동이 완료되면 새로 선택된 콘텐츠가 활성화됩니다. 아이템 외부 UI에서 전역 `currentIndex`가 필요할 때는 [`useGestureViewerState`](/guide/usage/gesture-viewer-state)를 사용하세요.

```tsx
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderMedia(item: MediaItem, _index: number, { isActive }: GestureViewerRenderItemInfo) {
  return (
    <Video
      source={{ uri: item.uri }}
      style={{ width: '100%', height: '100%' }}
      paused={!isActive}
      resizeMode="contain"
    />
  );
}

return <GestureViewer data={mediaItems} renderItem={renderMedia} />;
```
